--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>myFlix</title>
+    <link rel="stylesheet" href="index.scss">
   </head>
   <body>
     <div class="app-container"></div>
